--- a/angular-bs-base/angular.json
+++ b/angular-bs-base/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -92,6 +93,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -244,6 +246,128 @@
           }
         }
       }
-    }},
+    },
+    "material": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
+      "root": "projects/material",
+      "sourceRoot": "projects/material/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/material",
+            "index": "projects/material/src/index.html",
+            "main": "projects/material/src/main.ts",
+            "polyfills": "projects/material/src/polyfills.ts",
+            "tsConfig": "projects/material/tsconfig.app.json",
+            "aot": true,
+            "assets": [
+              "projects/material/src/favicon.ico",
+              "projects/material/src/assets"
+            ],
+            "styles": [
+              "projects/material/src/styles.scss"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "projects/material/src/environments/environment.ts",
+                  "with": "projects/material/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "material:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "material:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "material:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/material/src/test.ts",
+            "polyfills": "projects/material/src/polyfills.ts",
+            "tsConfig": "projects/material/tsconfig.spec.json",
+            "karmaConfig": "projects/material/karma.conf.js",
+            "assets": [
+              "projects/material/src/favicon.ico",
+              "projects/material/src/assets"
+            ],
+            "styles": [
+              "projects/material/src/styles.scss"
+            ],
+            "scripts": []
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/material/tsconfig.app.json",
+              "projects/material/tsconfig.spec.json",
+              "projects/material/e2e/tsconfig.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        },
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "projects/material/e2e/protractor.conf.js",
+            "devServerTarget": "material:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "material:serve:production"
+            }
+          }
+        }
+      }
+    }
+  },
   "defaultProject": "angular-bs-base"
 }
